# croot

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  layout.rs  main.rs  watcher.rs
src/cmux/: bridge.rs  mod.rs  protocol.rs
src/git/: mod.rs  propagator.rs  status.rs  types.rs
src/input/: handler.rs  mod.rs  mouse.rs
src/preview/: dispatcher.rs  highlight.rs  loader.rs  mod.rs  render_md.rs  state.rs
src/render/: colors.rs  context_menu.rs  icons.rs  input_dialog.rs  mod.rs  preview_view.rs  search_bar.rs  status_bar.rs  theme.rs  tree_view.rs
src/terminal/: ghostty.rs  mod.rs
src/tree/: forest.rs  loader.rs  mod.rs  node.rs  sorter.rs
