[package]
name = "croot"
version = "0.1.0"
edition = "2021"
description = "A lightweight terminal file tree sidebar"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
tokio = { version = "1", features = ["rt", "macros", "process", "sync", "time"] }
git2 = "0.19"
notify = "7"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
futures = "0.3"
anyhow = "1"
