[package]
name = "croot"
version = "0.1.0"
edition = "2021"
description = "A lightweight terminal file tree sidebar"
license = "MIT"
repository = "https://github.com/realzhangshen/croot"
homepage = "https://github.com/realzhangshen/croot"
readme = "README.md"
keywords = ["terminal", "file-tree", "tui", "sidebar", "cli"]
categories = ["command-line-utilities"]
authors = ["Zhang Shen"]

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
tokio = { version = "1", features = ["rt", "macros", "process", "sync", "time"] }
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
notify = "7"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
futures = "0.3"
anyhow = "1"

[profile.release]
strip = true
lto = "thin"
