[package]
name = "croot"
version = "0.4.0"
edition = "2021"
rust-version = "1.88"
description = "A lightweight terminal file tree sidebar"
license = "MIT"
repository = "https://github.com/realzhangshen/croot"
homepage = "https://github.com/realzhangshen/croot"
readme = "README.md"
keywords = ["terminal", "file-tree", "tui", "sidebar", "cli"]
categories = ["command-line-utilities"]
authors = ["Zhang Shen"]

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
tokio = { version = "1", features = ["rt", "macros", "process", "sync", "time"] }
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
notify = "7"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
futures = "0.3"
anyhow = "1"
syntect = { version = "5", default-features = false, features = ["default-themes", "regex-onig"] }
two-face = { version = "0.5", default-features = false, features = ["syntect-onig"] }
content_inspector = "0.2"
unicode-width = "0.2"
arboard = "3"
pulldown-cmark = { version = "0.12", default-features = false }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
unnecessary_wraps = "allow"
match_same_arms = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
manual_let_else = "allow"

[profile.release]
strip = true
lto = "thin"
